doc: update swagger doc
