# httpsvc/user_handler.go
@@ -77,25 +77,51 @@ func (s *Server) handleCreateUser(c echo.Context) error {
 	return c.JSON(http.StatusOK, userResFromModel(user))
 }
 
+type LoginRequest struct {
+	Email    string `json:"email" example:"your@email.com"`
+	Password string `json:"password"`
+} //@name LoginRequest
+
+type LoginResponse struct {
+	AccessToken  string `json:"accessToken"`
+	TokenType    string `json:"tokenType"`
+	ExpiredIn    int32  `json:"expiredIn"`
+	RefreshToken string `json:"refreshToken"`
+}
+
+// Login godoc
+// @Summary login a User
+// @ID Login
+// @Accept json
+// @Produce json
+// @Param user body LoginRequest true "login request"
+// @Success 200 {object} LoginResponse
+// @Failure 400 {object} Error
+// @Router /api/v1/users/login [post]
 func (s *Server) handleLogin(c echo.Context) error {
-	userReq := &UserRequest{}
-	err := c.Bind(userReq)
+	req := &LoginRequest{}
+	err := c.Bind(req)
 	if err != nil {
 		logrus.Error(err)
 		return responseError(c, err)
 	}
 
-	user, err := s.userUsecase.FindByEmailAndPassword(c.Request().Context(), userReq.Email, userReq.Password)
+	user, err := s.userUsecase.FindByEmailAndPassword(c.Request().Context(), req.Email, req.Password)
 	if err != nil {
 		logrus.Error(err)
 		return responseError(c, err)
 	}
 
-	token, err := generateToken(*user, createTokenExpiry())
+	expiredIn := createTokenExpiry()
+	token, err := generateToken(*user, expiredIn)
 	if err != nil {
-		logrus.WithField("email", userReq.Email).Error(err)
+		logrus.WithField("email", req.Email).Error(err)
 		return responseError(c, err)
 	}
 
-	return c.JSON(http.StatusOK, echo.Map{"token": token})
+	return c.JSON(http.StatusOK, LoginResponse{
+		AccessToken: token,
+		TokenType:   "Bearer",
+		ExpiredIn:   int32(expiredIn),
+	})
 }
